<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/hhhh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/hhh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneandhalf" />
        
        <RadioButton
            android:id="@+id/hh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />
        
         <RadioButton
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/half" />
 
    </RadioGroup>
 
    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm" />
    

</LinearLayout>
